--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   db:
     image: postgres:latest
@@ -11,19 +9,13 @@ services:
     ports:
       - "5432:5432"
 
-  web:
+  foodpack:
     build: .
-    command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -b '0.0.0.0'"
-    volumes:
-      - .:/foodpack
     ports:
-      - "3000:3000"
-    depends_on:
-      - db
-    environment:
-      DATABASE_URL: postgres://postgres:password@db:5432/foodpack
-      RAILS_ENV: development
-      BUNDLE_PATH: "/usr/local/bundle"
+      - "127.0.0.1:3000:3000"
+    volumes:
+      - "./:/foodpack"
+    command: bundle exec rails server -b 0.0.0.0
 
 volumes:
   pgdata:
