--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,13 +9,22 @@ services:
     ports:
       - "5432:5432"
 
-  foodpack:
+  web:
     build: .
     ports:
       - "127.0.0.1:3000:3000"
     volumes:
       - "./:/foodpack"
     command: bundle exec rails server -b 0.0.0.0
+
+  tailwind:
+    build: .
+    command:  bundle exec rails tailwindcss:watch
+    volumes:
+      - ".:/foodpack"
+    depends_on:
+      - web
+    stdin_open: true
 
 volumes:
   pgdata:
